Enhance Serper MCP Server with Command-Line Argument Support and Improved Error Handling
- Added argparse for command-line argument parsing in both serper_mcp_server.py and serper_mcp_server_secure.py.
- Improved error messages for missing API keys to provide clearer guidance.
- Updated function signatures in google_search, news_search, and scholar_search to use Pydantic's Field for better documentation.
- Enhanced logging of server initialization and transport type selection.
- Implemented tests for command-line argument handling and server transport selection, ensuring proper error messages for invalid inputs.
- Added tests to verify logging behavior when API keys are missing.

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,28 @@ __pycache__/
 # OS specific
 .DS_Store
 Thumbs.db
+
+
+# Python build artifacts
+dist/
+build/
+*.egg-info/
+.pytest_cache/
+.mypy_cache/
+htmlcov/
+.coverage
+
+# NPM
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Log files
+*.log
+
+# Language server configs
+pyrightconfig.json
+
+# Dependency lock files
+package-lock.json
