--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,10 @@ name = "serper-mcp"
 version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.11"
-dependencies = []
+dependencies = [
+    "fastmcp==2.6.1"
+]
+
 
 [dependency-groups]
 dev = [
