Implement secure Serper MCP server with authentication, rate limiting, and input validation
- Added `serper_mcp_server_secure.py` to handle secure API requests with Bearer token authentication.
- Implemented rate limiting to restrict requests per client.
- Introduced input validation for query parameters to prevent injection attacks.
- Enhanced logging for security-related events and errors.
- Created custom exceptions for better error handling.
- Developed unit tests for the new secure server functionalities, including successful and error scenarios for various tools.
- Updated command-line argument handling for server transport options.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,13 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.11"
 dependencies = [
-    "fastmcp==2.6.1"
+    "fastmcp==2.6.1",
+    "python-dotenv"
 ]
 
+
+[tool.setuptools.packages.find]
+where = ["src"]
 
 [dependency-groups]
 dev = [
