--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 requires-python = ">=3.11"
 dependencies = [
     "fastmcp==2.6.1",
-    "python-dotenv"
+    "python-dotenv",
+    "openai",
+    "networkx"
 ]
 
 
