--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,11 @@ dependencies = [
     "fastmcp==2.6.1",
     "python-dotenv",
     "openai",
-    "networkx"
+    "networkx",
+    "scikit-learn",
+    "splink",
+    "duckdb",
+    "splink-duckdb-linker"
 ]
 
 
