--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,7 @@ dependencies = [
     "networkx",
     "scikit-learn",
     "splink",
-    "duckdb",
-    "splink-duckdb-linker"
+    "duckdb"
 ]
 
 
